# transparent

./: README.md  huggingface_bnb_int8_t5.py  pyproject.toml  setup.sh
src/: data_utils.py  training_utils.py  transformer.py
src/scripts/: train_wikitext_transformer.py
transparent/: __init__.py  data_utils.py  logit_lens.py  permutation_utils.py  training_utils.py
transparent/scripts/: basin_testing.py  decode_value_weights.py  train_wikitext_transformer.py
